# basic-http-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cmakelists.txt  README.md
.github/workflows/: ci.yaml
include/: utils.h
src/: main.c  utils.c
src/test/: client.c
static/: index.html
